feat: backend-prod configuration